# NyaaPy

./: pyproject.toml
NyaaPy/: pantsu.py  requirements.txt  setup.py  sukebei.py
NyaaPy/__pycache__/: __init__.cpython-39.pyc~8222a6ece2a5388f5b8a1d79040a606b19c79478  pantsu.cpython-39.pyc~8222a6ece2a5388f5b8a1d79040a606b19c79478  torrent.cpython-39.pyc~8222a6ece2a5388f5b8a1d79040a606b19c79478
nyaapy/: nyaa.py  pantsu.py  sukebei.py
nyaapy/__pycache__/: nyaa.cpython-39.pyc~8222a6ece2a5388f5b8a1d79040a606b19c79478  sukebei.cpython-39.pyc~8222a6ece2a5388f5b8a1d79040a606b19c79478  utils.cpython-39.pyc~8222a6ece2a5388f5b8a1d79040a606b19c79478
